--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | 01_Sim_Orbital_</title>
+    <title>Unity WebGL Player | Pauli_dislama_ilkesi</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">01_Sim_Orbital_</div>
+        <div id="unity-build-title">Pauli_dislama_ilkesi</div>
       </div>
     </div>
     <script>
@@ -64,7 +64,7 @@
         codeUrl: buildUrl + "/Pauli_ilkesi.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "01_Sim_Orbital_",
+        productName: "Pauli_dislama_ilkesi",
         productVersion: "1.0",
         showBanner: unityShowBanner,
       };
